# MPG123-Android

./: .gitignore  LICENSE  README.md  README_zh.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/me/rosuh/decoder/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/me/rosuh/decoder/: LocalMusicUtils.kt  MPG123.java  MainActivity.kt
app/src/main/jni/mpg123-1.25.12/: Android.mk  me_rosuh_decoder_MPG123.c  me_rosuh_decoder_MPG123.h
app/src/main/jni/mpg123-1.25.6/: me_rosuh_decoder_MPG123.c
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/me/rosuh/decoder/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
libmpg123/: CMakeLists.txt  build.gradle
libmpg123/src/androidTest/java/me/rosuh/libmpg123/: ExampleInstrumentedTest.kt
libmpg123/src/main/: AndroidManifest.xml
libmpg123/src/main/java/me/rosuh/libmpg123/: MPG123.java  SeekMode.java
libmpg123/src/main/jni/: Application.mk  me_rosuh_libmpg123_MPG123.c
libmpg123/src/main/jni/mpg123-1.25.12/: me_rosuh_libmpg123_MPG123.c  me_rosuh_libmpg123_MPG123.h
libmpg123/src/main/jni/mpg123-1.25.12/ports/MSVC++/2008clr/mpg123clr/: advanced.cpp  error.cpp  id3v1.cpp  id3v2.cpp  string.cpp  text.cpp
libmpg123/src/main/jni/mpg123-1.25.12/ports/MSVC++/CMP3Stream/INCLUDE/: IIEP_FileIn.H
libmpg123/src/main/jni/mpg123-1.28.2/: me_rosuh_libmpg123_MPG123.c  me_rosuh_libmpg123_MPG123.h
libmpg123/src/test/java/me/rosuh/libmpg123/: ExampleUnitTest.kt
